...
      name="Home"
      options={({navigation}) => ({
        headerRight: () => (
          <Button
            onPress={() => navigation.push('Stubs')}
            title="Stubs"
            testID="StubsBtn"
          />
        ),
      })}>
      {() => <View />}
    </Stack.Screen>
    <Stack.Screen name="Stubs" component={Stubs} />
...
      options={({navigation}) => ({
        title: 'My Lists',
        headerRight: () => (
          <Button
            onPress={() => navigation.push('CreateListModal')}
            title="Add"
            testID="AddBtn"
          />
        ),
      })}
    />
  </Stack.Navigator>
);
...
